Refactor, more responsive design, a few stylistic changes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
         <!-- HEADER -->
         <div class="header">
             <!-- NAVBAR -->
-        <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgba(0, 60, 60, 0.85);">
                 <a class="navbar-brand" href="#">Rapture</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,12 +29,12 @@
                 </div>
             </nav>
             <div class="header-content">
-                <h1>No gods or kings. Only man.</h1>
+                <h1>No Gods Or Kings. Only Man.</h1>
                 <p>
                     Rapture, a place to escape the anxieties brought on by the 'common man'. A place where the work of your hand is a feat that you can call your own,
                     without the overbearing hand pushing on your shoulders to keep you down. Join the elite today to forge a better world of tomorrow.
                 </p>
-                <button class="btn">Escape to Rapture</button>
+                <button class="btn btn-lg btn-success">Escape to Rapture</button>
             </div>
         </div>
 
@@ -46,36 +45,40 @@
                     <div class="card showcase-card">
                         <img class="card-img-top" src="images/plasmid.png" alt="Plasmid Image">
                         <div class="card-body">
-                            <h5 class="card-title">Realize your potential!</h5>
+                            <p class="card-title">Realize your potential!</p>
                             <p class="card-text">Through the use of plasmids and tonics, expand your mental and physical capabilities.</p>
                         </div>
+                        <button class="btn btn-block btn-primary">Learn More</button>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
                     <div class="card showcase-card">
                         <img class="card-img-top" src="images/plasmid.png" alt="Plasmid Image">
                         <div class="card-body">
-                            <h5 class="card-title">Realize your potential!</h5>
+                            <p class="card-title">Realize your potential!</p>
                             <p class="card-text">Through the use of plasmids and tonics, expand your mental and physical capabilities.</p>
                         </div>
+                        <button class="btn btn-block btn-primary">Learn More</button>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
                     <div class="card showcase-card">
                         <img class="card-img-top" src="images/plasmid.png" alt="Plasmid Image">
                         <div class="card-body">
-                            <h5 class="card-title">Realize your potential!</h5>
+                            <p class="card-title">Realize your potential!</p>
                             <p class="card-text">Through the use of plasmids and tonics, expand your mental and physical capabilities.</p>
                         </div>
+                        <button class="btn btn-block btn-primary">Learn More</button>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-xs-12">
                     <div class="card showcase-card">
                         <img class="card-img-top" src="images/plasmid.png" alt="Plasmid Image">
                         <div class="card-body">
-                            <h5 class="card-title">Realize your potential!</h5>
+                            <p class="card-title">Realize your potential!</p>
                             <p class="card-text">Through the use of plasmids and tonics, expand your mental and physical capabilities.</p>
                         </div>
+                        <button class="btn btn-block btn-primary">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -115,31 +118,37 @@
         <!-- PREVIEW -->
         <div class="preview">
             <div class="preview-container">
-                <h2>Coming Soon</h2>
-                <h3>Columbia: The Flying City!</h3>
-                <div class="thumbnail"><img src="images/columbia.png" alt="Columbia"></div>
-                <button class="btn btn-block">Preview</button>
+                <p>Coming Soon</p>
+                <h2>Columbia: The Flying City!</h2>
+                <img class="img-fluid" src="images/columbia.png" alt="Columbia">
+                <button class="btn btn-block btn-info">Preview</button>
             </div>
         </div>
 
         <!-- CONTACT -->
         <div class="contact">
-            <div id="rap-map"></div>
-            <div class="contact-form">
-                <h4>Contact Us:</h4>
-                <div class="form-group">
-                    <label for="firstNameForm">First Name</label>
-                    <input id="firstNameForm" class="form-control" type="text" placeholder="Andrew" required>
+            <div class="row">
+                <div class="col-md-7 col-sm-12">
+                    <div id="rap-map"></div>
                 </div>
-                <div class="form-group">
-                    <label for="lastNameForm">Last Name</label>
-                    <input id="lastNameForm" class="form-control" type="text" placeholder="Ryan" required>
+                <div class="col-md-5 col-sm-12">
+                    <div class="contact-form">
+                        <h4>Contact Us:</h4>
+                        <div class="form-group">
+                            <label for="firstNameForm">First Name</label>
+                            <input id="firstNameForm" class="form-control" type="text" placeholder="Andrew" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="lastNameForm">Last Name</label>
+                            <input id="lastNameForm" class="form-control" type="text" placeholder="Ryan" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="emailForm">Email</label>
+                            <input id="emailForm" class="form-control" type="email" placeholder="master@wouldyoukindly.com" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                    </div>
                 </div>
-                <div class="form-group">
-                    <label for="emailForm">Email</label>
-                    <input id="emailForm" class="form-control" type="email" placeholder="master@wouldyoukindly.com" required>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
             </div>
         </div>
 
